@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Thu, 10 Oct 2024 16:17:29 +0800</lastBuildDate>
+  <lastBuildDate>Thu, 10 Oct 2024 16:26:08 +0800</lastBuildDate>
 
   <item>
   <title>K-POP風暴席捲全球：ATEEZ擴大歐洲巡迴、BTS成員V白金認證、Infinite慶祝出道15週年</title>
@@ -13,5 +13,11 @@
   <description>K-POP風暴席捲全球：ATEEZ擴大歐洲巡迴、BTS成員V白金認證、Infinite慶祝出道15週年</description>
   <category>K-Pop</category>
   <pubDate>Thu, 10 Oct 2024 16:17:29 +0800</pubDate>
+</item><item>
+  <title>睽違8年！朴宰范推出20首歌曲的經典R&amp;B專輯：我的音樂是我的驕傲</title>
+  <link>https://www.famechos.me/news/睽違8年！朴宰范推出20首歌曲的經典R&amp;B專輯：我的音樂是我的驕傲/</link>
+  <description>睽違8年！朴宰范推出20首歌曲的經典R&amp;B專輯：我的音樂是我的驕傲</description>
+  <category>K-Pop</category>
+  <pubDate>Thu, 10 Oct 2024 16:26:08 +0800</pubDate>
 </item></channel>
 </rss>
