@@ -1,0 +1,262 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u777d\u90558\u5e74\uff01\u6734\u5bb0\u8303\u63a8\u51fa20\u9996\u6b4c\u66f2\u7684\u7d93\u5178R&B\u5c08\u8f2f\uff1a\u6211\u7684\u97f3\u6a02\u662f\u6211\u7684\u9a55\u50b2", "description": "\u777d\u90558\u5e74\uff01\u6734\u5bb0\u8303\u63a8\u51fa20\u9996\u6b4c\u66f2\u7684\u7d93\u5178R&B\u5c08\u8f2f\uff1a\u6211\u7684\u97f3\u6a02\u662f\u6211\u7684\u9a55\u50b2", "url": "https://www.famechos.me/news/\u777d\u90558\u5e74\uff01\u6734\u5bb0\u8303\u63a8\u51fa20\u9996\u6b4c\u66f2\u7684\u7d93\u5178R&B\u5c08\u8f2f\uff1a\u6211\u7684\u97f3\u6a02\u662f\u6211\u7684\u9a55\u50b2/", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-10T16:26:01.316473+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/睽違8年！朴宰范推出20首歌曲的經典R&B專輯：我的音樂是我的驕傲/"/>
+<meta name="description" content="睽違8年！朴宰范推出20首歌曲的經典R&B專輯：我的音樂是我的驕傲。這張專輯是朴宰范的音樂生涯新里程碑，呈現他多年來的音樂成就與堅持。">
+
+<meta name="keywords" content="朴宰范，經典R&B專輯，我的音樂是我的驕傲，睽違8年，音樂生涯，新里程碑，R&B音樂">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/睽違8年！朴宰范推出20首歌曲的經典R&B專輯：我的音樂是我的驕傲/" />
+        <meta property="og:title" content="睽違8年！朴宰范推出20首歌曲的經典R&B專輯：我的音樂是我的驕傲" />
+        <meta property="og:description" content="睽違8年！朴宰范推出20首歌曲的經典R&B專輯：我的音樂是我的驕傲" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="睽違8年！朴宰范推出20首歌曲的經典R&B專輯：我的音樂是我的驕傲" />
+        <meta property="twitter:description" content="睽違8年！朴宰范推出20首歌曲的經典R&B專輯：我的音樂是我的驕傲" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>睽違8年！朴宰范推出20首歌曲的經典R&B專輯：我的音樂是我的驕傲</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">10/10/2024</p>
+        </div>
+	<p>韓國歌手兼饒舌歌手朴宰范最近推出了一張令粉絲們引頸期盼的錄音室專輯。這張專輯名為《The One You Wanted》，共收錄20首歌曲，其中包括9首新歌和11首先前發行的單曲。</p>
+<p>朴宰范在音樂試聽會上表示，自從《Everything You Wanted》以來，他一直計劃推出更多R&B專輯，但由於各種原因，這個計劃一直被延遲。他終於成功地收集了過去七年來他工作過的R&B曲目，並將它們匯集成一張專輯。</p>
+<p>以下是《The One You Wanted》的曲目列表：</p>
+<ul>
+<li>9首新歌</li>
+<li>11首先前發行的單曲</li>
+</ul>
+<p>朴宰范指出，他之所以發行一張包含多達20首歌曲的專輯，是因為這些歌曲從一開始就是為錄音室專輯而創作的。他希望公眾能夠好好地聆聽每一首歌曲，因此決定先發行專輯曲目作為單曲，並分別宣傳每一首歌曲。</p>
+朴宰范強調，作為一名藝術家，他有一種持續發展的渴望，即使他也是自己唱片公司的CEO，他也希望保持藝術方面。因此，他決定發行一張包含20首歌曲的專輯，儘管這在經濟上並不划算。<h2>朴宰范：我的音樂是我的驕傲</h2>
+<p>朴宰范最近發行了一張新專輯，他表示這是他的一件自然的事情。他以許多方式為這張專輯感到驕傲，MORE VISION的員工也可以為它感到驕傲。</p>
+<p>專輯中有三首主打歌曲：《Mayday（feat. 泰·多拉·辛）》、《Gimme A Minute（feat. 金請夏）》和《Peace of Heaven（feat. 아이솔 of MORE VISION）》。朴宰范認為《Mayday》是最能代表他的R&B風格的歌曲。</p>
+<p>他希望《Mayday》能成為他的經典曲目，能夠經受住時間的考驗。許多歌手隨著時間的推移會對趨勢或變得老套變得敏感，但朴宰范對他的音樂有驕傲和信心，這就是為什麼他現在發行一首他七年前工作過的歌曲。</p>
+<p>朴宰范還分享了他對公眾期待他在表演中展示他的著名六塊肌肉的擔憂。他知道很多人希望他在表演中炫耀自己，但他不想依靠它。他希望它能成為人們發現他的音樂的門戶。</p>
+
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/zOV5wsYC0rs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： Korea Herald</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        <p class ="related-news">
+          <i class="bi bi-dot"></i>
+          K-pop 偶像「假唱門」再起！你知道他們的現場表演有多少是假唱嗎？
+        </p>
+        <p class ="related-news">
+          <i class="bi bi-dot"></i>
+          K-pop 偶像「假唱門」再起！你知道他們的現場表演有多少是假唱嗎？
+        </p>
+        <p class ="related-news">
+          <i class="bi bi-dot"></i>
+          K-pop 偶像「假唱門」再起！你知道他們的現場表演有多少是假唱嗎？
+        </p>
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
