@@ -114,4 +114,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/睽違8年！朴宰范推出20首歌曲的經典R&amp;B專輯：我的音樂是我的驕傲/</ns0:loc>
+    <ns0:lastmod>2024-10-10T16:26:08+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
